--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
+}
+
+body {
+    background-color: black
+}
+
+#title {
+    color: #CCFF00
+}
+
+textarea {
+    height: 200px
+}
+
+#preview {
+    width: 65%;
+    height: auto;
+    min-height: 200px;
+    background-color: #CCFF00;
+    clear: both;
+}
+
+code {
+    background: white;
+    font-size: 0.875rem;
+    font-weight: bold;
+}
+
+img {
+    display: block;
+    max-width: 90%;
+    margin: 2rem auto;
+}
+
+h3 {
+    color: turquoise
 }
